sfSandBoxCode/force-app/main/default/objects/Recurring_Service_PR_Item__c/Recurring_Service_PR_Item__c.object-meta.xml
<CustomObject>
    <label>Recurring Service PR Item</label>
    <nameField>
        <displayFormat>RSPRI-{000000000}</displayFormat>
        <label>PR Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Service PR Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>