sfSandBoxCode/force-app/main/default/objects/Recurring_Service_PR_Item__c/fields/Allow_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked it will allow deletion of this item</description>
    <inlineHelpText>If checked it will allow deletion of this item</inlineHelpText>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>