sfSandBoxCode/force-app/main/default/objects/Recurring_Service_PR_Item__c/fields/PO_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Recurring Service PR Items</relationshipLabel>
    <relationshipName>Recurring_Service_PR_Items</relationshipName>
    <type>Lookup</type>
</CustomField>