sfSandBoxCode/force-app/main/default/objects/Recurring_Service_PR_Item__c/fields/PR_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PR_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PR Line Item</label>
    <referenceTo>PTS_Line_Item__c</referenceTo>
    <relationshipLabel>Recurring Service PR Items</relationshipLabel>
    <relationshipName>Recurring_Service_PR_Items</relationshipName>
    <type>Lookup</type>
</CustomField>