sfSandBoxCode/force-app/main/default/objects/Recurring_Service_PR_Item__c/fields/Recurring_Service__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Service</label>
    <referenceTo>Recurring_Service__c</referenceTo>
    <relationshipLabel>Recurring Service PR Items</relationshipLabel>
    <relationshipName>Recurring_Service_PR_Items</relationshipName>
    <type>Lookup</type>
</CustomField>