sfSandBoxCode/force-app/main/default/objects/Recurring_Service_PR_Item__c/fields/Recurring_Service_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Service_Line_Item__c</fullName>
    <label>Recurring Service Line Item</label>
    <referenceTo>Recurring_Service_Line_Item__c</referenceTo>
    <relationshipLabel>Recurring Service PR Items</relationshipLabel>
    <relationshipName>Recurring_Service_PR_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>